feature: page for task states statistics
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/app/@routes/base/base.html
+++ b/ui/dashboard/src/app/@routes/base/base.html
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/templates">Templates</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/stats">Stats</a>
+      </li>
     </ul>
     <div>
       <ul class="navbar-nav mr-auto">
