--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -169,7 +169,9 @@ g.node
 
 .main
   > header
-    margin: 16px 0px 24px 18px
+    margin: 8px 0px 12px 18px
+    h1
+      font-size: 26px
 
   .utask_username_me
     font-weight: bold
