--- a/ui/dashboard/src/app/@routes/task/task.html
+++ b/ui/dashboard/src/app/@routes/task/task.html
@@ -3,27 +3,24 @@
   <div class="main" *ngIf="(!loaders.task && !loaders.resolution) || task">
     <header>
       <h1>
-        Task
         <span class="bloc_status task_state_{{task.state}}">{{task.state}}</span>
-      </h1>
-      <h2>
         {{task.title}}
 
         <div class="float-right">
           <div class="btn-group" role="group">
             <button type="button" class="btn btn-secondary btn-outline-primary" (click)="autorefresh = !autorefresh;">
-              <input type="checkbox" [(ngModel)]="autorefresh" readonly="readonly" style="pointer-events: none;"/>
-              &nbsp;Autorefresh (15s)
+              <input type="checkbox" [(ngModel)]="autorefresh" readonly="readonly" style="pointer-events: none;" />
+              &nbsp;Autorefresh (5s)
             </button>
-            <button class="btn btn-primary control-inline" (click)="loadTask();"
-            title="Refresh tasks" [disabled]="loaders.task || loaders.resolution">
-            <i class="fas fa-sync" ng-class="{'fa-spin': loaders.tasks}"></i>
-            Refresh
-          </button>
+            <button class="btn btn-primary control-inline" (click)="loadTask();" title="Refresh tasks"
+              [disabled]="loaders.task || loaders.resolution">
+              <i class="fas fa-sync" ng-class="{'fa-spin': loaders.tasks}"></i>
+              Refresh
+            </button>
           </div>
         </div>
-      </h2>
-      <br clear="both"/>
+      </h1>
+      <br clear="both" />
     </header>
     <section>
 
@@ -62,10 +59,10 @@
             <button class="btn btn-sm btn-primary" ngbDropdownToggle>Actions</button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem (click)="previewDetails(task, 'Request preview'); $event.stopPropagation();">
-                View details
+                View as code
               </button>
               <button ngbDropdownItem (click)="editRequest(task); $event.stopPropagation();">
-                Edit request
+                Edit
               </button>
               <button ngbDropdownItem (click)="deleteTask(task.id); $event.stopPropagation();">
                 Delete
@@ -74,25 +71,6 @@
           </div>
         </header>
         <section *ngIf="display.request">
-          <p>
-            Created <abbr
-              title="{{task.created | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.created | fromNow}}</em></abbr>
-            by <strong>{{task.requester_username}}</strong>
-          </p>
-          <p>
-            Last activity <abbr
-              title="{{task.last_activity | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.last_activity | fromNow}}</em></abbr>
-            <span *ngIf="task.resolver_username"> by <strong>{{task.resolver_username}}</strong></span>
-          </p>
-          <p>
-            The template is
-            <a [routerLink]="'/template/'+task.template_name" title="Template {{task.template_name}}"
-              *ngIf="meta.user_is_admin">
-              <strong>{{task.template_name}}</strong>
-            </a>
-            <strong *ngIf="!meta.user_is_admin">{{task.template_name}}</strong>
-          </p>
-
           <h3>Inputs</h3>
           <table class="table table-responsive table-striped table-condensed">
             <tbody>
@@ -104,6 +82,17 @@
               </tr>
             </tbody>
           </table>
+
+          <small>Created from the template '<a [routerLink]="'/template/'+task.template_name"
+              title="Template {{task.template_name}}" *ngIf="meta.user_is_admin">
+              <strong>{{task.template_name}}</strong>
+            </a><strong *ngIf="!meta.user_is_admin">{{task.template_name}}</strong>'
+            by {{task.requester_username}} <abbr
+              title="{{task.created | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.created | fromNow}}</em></abbr>
+            <span *ngIf="task.created != task.last_activity || task.requester_username != task.resolver_username"> and
+              updated by {{task.resolver_username}} <abbr
+                title="{{task.last_activity | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.last_activity | fromNow}}</em></abbr></span>
+          </small>
         </section>
       </div>
 
@@ -124,18 +113,12 @@
           <div class="btn-group utask_bloc_header_dropdown" ngbDropdown role="group">
             <button class="btn btn-sm btn-primary" ngbDropdownToggle>Actions</button>
             <div class="dropdown-menu" ngbDropdownMenu>
-              <button ngbDropdownItem (click)="previewDetails(resolution, 'Resolution preview');">View
-                details</button>
-              <button ngbDropdownItem (click)="runResolution(resolution);">Run
-                resolution</button>
-              <button ngbDropdownItem (click)="pauseResolution(resolution);">Pause
-                resolution</button>
-              <button ngbDropdownItem (click)="extendResolution(resolution);">Extend
-                resolution</button>
-              <button ngbDropdownItem (click)="cancelResolution(resolution);">Cancel
-                resolution</button>
-              <button ngbDropdownItem (click)="editResolution(resolution);">Edit
-                resolution</button>
+              <button ngbDropdownItem (click)="previewDetails(resolution, 'Resolution preview');">View as code</button>
+              <button ngbDropdownItem (click)="runResolution(resolution);">Run</button>
+              <button ngbDropdownItem (click)="pauseResolution(resolution);">Pause</button>
+              <button ngbDropdownItem (click)="extendResolution(resolution);">Extend</button>
+              <button ngbDropdownItem (click)="cancelResolution(resolution);">Cancel</button>
+              <button ngbDropdownItem (click)="editResolution(resolution);">Edit</button>
             </div>
           </div>
         </header>
@@ -321,7 +304,8 @@
             <span *ngIf="!display.comments">
               <i class="fas fa-caret-up"></i>
             </span>
-            Comments
+            Comments - <span class="badge"
+              [ngClass]="{'badge-warning': task.comments.length > 0, 'badge-secondary': !task.comments || task.comments.length === 0}">{{task.comments.length}}</span>
           </div>
         </header>
         <section *ngIf="display.comments">
