fix(ui): update dependencies
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -1,6 +1,7 @@
 @import "styles/colors.sass"
 
 @import 'tippy.js/dist/tippy.css'
+@import 'tippy.js/animations/scale.css'
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss"
 
