--- a/ui/dashboard/src/app/@modals/modal-edit-resolution/modal-edit-resolution.component.html
+++ b/ui/dashboard/src/app/@modals/modal-edit-resolution/modal-edit-resolution.component.html
@@ -11,6 +11,7 @@
         <editor [value]="text" [errors]="errors" [config]="config" (update)="textUpdate($event)"></editor>
 
         <error-message [data]="error" *ngIf="error && !loading"></error-message>
+        <error-message [data]="'The yaml is invalid'" *ngIf="yamlInvalid"></error-message>
     </div>
     <footer class="modal-footer">
         <button type="button" class="btn btn-success" (click)="submit();" [disabled]="loading">
