--- a/ui/dashboard/src/app/@components/stepsviewer/stepsviewer.html
+++ b/ui/dashboard/src/app/@components/stepsviewer/stepsviewer.html
@@ -1,7 +1,7 @@
 <div>
   <div class="alert alert-danger" role="alert" *ngIf="error">{{error}}</div>
 
-  <div style="width:100%;height:600px;overflow:hidden;border-left:1px solid #F0F0F0;padding-left:8px;background:white">
+  <div style="width:100%;height:600px;overflow:hidden;border-left:1px solid #F0F0F0;padding-left:8px;background:white;border-top: 1px solid #F0F0F0;">
     <svg width="100%" height="600px" #svg>
       <defs>
         <pattern id="shape_white_striped" patternUnits="userSpaceOnUse" width="13.5" height="13.5"
