--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -117,7 +117,7 @@
   &_WONTFIX, &_CANCELLED, &_PAUSED
     background: $color-warning !important
     color: white !important
-  &_SERVER_ERROR, &_ERROR, &_BLOCKED_MAXRETRIES, &_BLOCKED, &_BLOCKED_BADREQUEST
+  &_SERVER_ERROR, &_ERROR, &_BLOCKED_MAXRETRIES, &_BLOCKED, &_BLOCKED_BADREQUEST, &_BLOCKED_FATAL
     background: $color-danger !important
     color: white !important
   &_DONE
