--- a/ui/dashboard/src/app/@routes/task/task.html
+++ b/ui/dashboard/src/app/@routes/task/task.html
@@ -1,6 +1,8 @@
 <div>
-  <loader *ngIf="(loaders.task || loaders.resolution) && !task"></loader>
-  <div class="main" *ngIf="(!loaders.task && !loaders.resolution) || task">
+  <loader *ngIf="(loaders.task || loaders.resolution) && !task && !errors.main"></loader>
+  <error-message [data]="errors.main" *ngIf="errors.main"></error-message>
+
+  <div class="main" *ngIf="((!loaders.task && !loaders.resolution) || task) && !errors.main">
     <header>
       <h1>
         <span class="bloc_status task_state_{{task.state}}">{{task.state}}</span>
@@ -71,8 +73,8 @@
           </div>
         </header>
         <section *ngIf="display.request">
-          <h3>Inputs</h3>
-          <table class="table table-responsive table-striped table-condensed">
+          <h3 *ngIf="task.input">Inputs</h3>
+          <table class="table table-responsive table-striped table-condensed" *ngIf="task.input">
             <tbody>
               <tr *ngFor="let inputKey of objectKeys(task.input)">
                 <td>{{inputKey}}</td>
@@ -82,7 +84,6 @@
               </tr>
             </tbody>
           </table>
-
           <small>Created from the template '<a [routerLink]="'/template/'+task.template_name"
               title="Template {{task.template_name}}" *ngIf="meta.user_is_admin">
               <strong>{{task.template_name}}</strong>
@@ -125,12 +126,18 @@
 
         <section *ngIf="display.execution">
           <div class="row">
-            <span class="col-3">Resolved by</span>
-            <strong class="col-9">{{resolution.resolver_username}}</strong>
+            <div class="col-4">
+              <h3>Steps</h3>
+              <steps-list [steps]="resolution.steps" *ngIf="resolution.steps" [selectedStep]="selectedStep">
+              </steps-list>
 
-            <span class="col-3">Instance id</span>
-            <strong class="col-9">{{resolution.instance_id}}</strong>
-
+            </div>
+            <div class="col-8" style="overflow: auto;">
+              <steps-viewer [item]="resolution" (select)="selectStepFromViewer($event)" done="true"></steps-viewer>
+            </div>
+          </div>
+          <p>Execution instance #{{resolution.instance_id}} resolved by {{resolution.resolver_username}}.</p>
+          <div class="row">
             <span class="col-3">Last start</span>
             <strong class="col-9">{{resolution.last_start | date: 'yyyy/MM/dd HH:mm'}}</strong>
 
@@ -139,20 +146,6 @@
 
             <span class="col-3">Run count</span>
             <strong class="col-9">{{resolution.run_count}} / {{resolution.run_max}}</strong>
-          </div>
-
-          <h3>Steps</h3>
-
-          <div class="row">
-            <div class="col-4">
-
-              <steps-list [steps]="resolution.steps" *ngIf="resolution.steps" [selectedStep]="selectedStep">
-              </steps-list>
-
-            </div>
-            <div class="col-8" style="overflow: auto;">
-              <steps-viewer [item]="resolution" (select)="selectStepFromViewer($event)" done="true"></steps-viewer>
-            </div>
           </div>
         </section>
       </div>
