feat(ui/dashboard): auto refresh home page / fix(ui/dashboard): new form
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/app/@routes/home/home.html
+++ b/ui/dashboard/src/app/@routes/home/home.html
@@ -2,6 +2,7 @@
   <loader *ngIf="loaders.tasks"></loader>
   <error-message [data]="errors.tasks" *ngIf="errors.tasks && !loaders.tasks"></error-message>
 
+
   <div class="main" *ngIf="!loaders.tasks && !errors.tasks">
     <header>
       <h1>
@@ -30,9 +31,15 @@
     <section>
       <div class="utask_bloc">
         <header>
-          <div class="utask_bloc_header_title">Tasks</div>
+          <div class="utask_bloc_header_title" style="width:100%">
+            Tasks
+          </div>
         </header>
         <section>
+          <div *ngIf="display.newTasks" class="alert alert-info">
+            <strong>New tasks</strong> has been added. <button type="button" class="btn btn-info"
+              (click)="displayNewTasks()">Fetch the new ones</button>
+          </div>
           <div class="table-striped table-condensed" infiniteScroll (scrolled)="next()">
             <table class="table home_tasks">
               <thead>
@@ -46,64 +53,72 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let item of tasks">
-                  <th scope="row">
-                    <p class="task_title"><a [routerLink]="'/task/'+item.id" title="{{item.title}}" class="nowrap"
-                        style="display:block">{{item.title}}</a></p>
-                    <p class="task_id nowrap"><small>{{item.id}}</small></p>
-                  </th>
-                  <td class="utask_state_steps nowrap">
-                    <div class="utask_state_steps-state utask_state_steps-state__{{item.state}}">
-                      {{item.state}}
-                    </div>
-                    <div class="utask_state_steps-steps" *ngIf="item.state !== 'DONE'">
-                      <div class="utask_state_steps-steps-progressbar" [ngStyle]="{
+                <ng-template ngFor let-item [ngForOf]="tasks">
+                  <tr *ngIf="!item.hide">
+                    <th scope="row">
+                      <p class="task_title"><a [routerLink]="'/task/'+item.id" title="{{item.title}}" class="nowrap"
+                          style="display:block">{{item.title}}</a></p>
+                      <p class="task_id nowrap"><small>{{item.id}}</small></p>
+                    </th>
+                    <td class="utask_state_steps nowrap">
+                      <div class="utask_state_steps-state utask_state_steps-state__{{item.state}}">
+                        {{item.state}}
+                      </div>
+                      <div class="utask_state_steps-steps" *ngIf="item.state !== 'DONE'">
+                        <div class="utask_state_steps-steps-progressbar" [ngStyle]="{
                           'width': percentages[item.id] + '%'
                         }">
+                        </div>
+                        <div class="utask_state_steps-steps-text">{{percentages[item.id]}} %</div>
                       </div>
-                      <div class="utask_state_steps-steps-text">{{percentages[item.id]}} %</div>
-                    </div>
-                  </td>
-                  <td class="nowrap d-none d-md-table-cell">
-                    <p class="task_title" [ngClass]="{'utask_username_me': item.requester_username === meta.username}">
-                      {{item.requester_username}}
-                    </p>
-                    <p class="task_id nowrap"><small>{{item.created | fromNow}}</small></p>
-                  </td>
-                  <td class="nowrap d-none d-lg-table-cell"><span
-                      [ngClass]="{'utask_username_me': item.resolver_username === meta.username}">{{item.resolver_username}}</span>
-                  </td>
-                  <td class="nowrap d-none d-xl-table-cell">{{item.last_activity | fromNow}}</td>
-                  <td class="task_actions">
-                    <div class="btn-group" ngbDropdown placement="bottom-right" role="group">
-                      <button class="btn btn-sm btn-secondary btn-outline-primary" ngbDropdownToggle>Actions</button>
-                      <div class="dropdown-menu" ngbDropdownMenu>
-                        <strong *ngIf="item.resolution" class="px-3 py-3" style="font-size:18px;">Execution</strong>
-                        <button *ngIf="item.resolution" ngbDropdownItem
-                          (click)="runResolution(item.resolution, item.id); $event.stopPropagation();">
-                          Run
-                        </button>
-                        <button *ngIf="item.resolution" ngbDropdownItem
-                          (click)="pauseResolution(item.resolution, item.id); $event.stopPropagation();">
-                          Pause
-                        </button>
-                        <button *ngIf="item.resolution" ngbDropdownItem
-                          (click)="cancelResolution(item.resolution, item.id); $event.stopPropagation();">
-                          Cancel
-                        </button>
-                        <button *ngIf="item.resolution" ngbDropdownItem
-                          (click)="extendResolution(item.resolution, item.id); $event.stopPropagation();">
-                          Extend
-                        </button>
+                    </td>
+                    <td class="nowrap d-none d-md-table-cell">
+                      <p class="task_title"
+                        [ngClass]="{'utask_username_me': item.requester_username === meta.username}">
+                        {{item.requester_username}}
+                      </p>
+                      <p class="task_id nowrap"><small>{{item.created | fromNow}}</small></p>
+                    </td>
+                    <td class="nowrap d-none d-lg-table-cell"><span
+                        [ngClass]="{'utask_username_me': item.resolver_username === meta.username}">{{item.resolver_username}}</span>
+                    </td>
+                    <td class="nowrap d-none d-xl-table-cell">{{item.last_activity | fromNow}}</td>
+                    <td class="task_actions">
+                      <div class="btn-group" ngbDropdown placement="bottom-right" role="group">
+                        <button class="btn btn-sm btn-secondary btn-outline-primary" ngbDropdownToggle>Actions</button>
+                        <div class="dropdown-menu" ngbDropdownMenu>
+                          <strong *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            class="px-3 py-3" style="font-size:18px;">Execution</strong>
+                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            ngbDropdownItem
+                            (click)="runResolution(item.resolution, item.id); $event.stopPropagation();">
+                            Run
+                          </button>
+                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            ngbDropdownItem
+                            (click)="pauseResolution(item.resolution, item.id); $event.stopPropagation();">
+                            Pause
+                          </button>
+                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            ngbDropdownItem
+                            (click)="cancelResolution(item.resolution, item.id); $event.stopPropagation();">
+                            Cancel
+                          </button>
+                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            ngbDropdownItem
+                            (click)="extendResolution(item.resolution, item.id); $event.stopPropagation();">
+                            Extend
+                          </button>
 
-                        <strong class="px-3 py-3" style="font-size:18px;">Task</strong>
-                        <button ngbDropdownItem (click)="deleteTask(item.id); $event.stopPropagation();">
-                          Delete
-                        </button>
+                          <strong class="px-3 py-3" style="font-size:18px;">Task</strong>
+                          <button ngbDropdownItem (click)="deleteTask(item.id); $event.stopPropagation();">
+                            Delete
+                          </button>
+                        </div>
                       </div>
-                    </div>
-                  </td>
-                </tr>
+                    </td>
+                  </tr>
+                </ng-template>
               </tbody>
             </table>
           </div>
