--- a/ui/dashboard/src/app/@routes/templates/templates.html
+++ b/ui/dashboard/src/app/@routes/templates/templates.html
@@ -32,6 +32,7 @@
                 <span class="badge badge-warning" *ngIf="template.allow_all_resolver_usernames">Allow all resolver
                   usernames</span>
                 <span class="badge badge-danger" *ngIf="template.blocked">Blocked</span>
+                <span class="badge badge-warning" *ngIf="template.hidden">Hidden</span>
               </td>
             </tr>
             <tr *ngIf="display[template.name]">
