--- a/ui/dashboard/src/styles/bloc.sass
+++ b/ui/dashboard/src/styles/bloc.sass
@@ -18,13 +18,18 @@
       content: " "
 
     .utask_bloc_header_dropdown
-      width: 120px
+      width: 180px
       float: right
       padding: 4px 8px
+      text-align: right
       height: 40px
+      > .btn-group
+        width: 100%
+        > div
+          text-align: center
 
     .utask_bloc_header_title
-      width: calc(100% - 120px)
+      width: calc(100% - 180px)
       float: left
       padding: 8px 14px
       height: 40px
