fix(dashboard/ui): refresh home page / ergo: buttons
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/src/app/@routes/task/task.html
+++ b/ui/dashboard/src/app/@routes/task/task.html
@@ -126,10 +126,10 @@
               </button>
             </div>
             <div class="dropdown-menu" ngbDropdownMenu>
-              <button ngbDropdownItem (click)="previewDetails(resolution, 'Resolution preview');">View as code</button>
-              <button ngbDropdownItem (click)="pauseResolution(resolution);">Pause</button>
-              <button ngbDropdownItem (click)="extendResolution(resolution);">Extend</button>
-              <button ngbDropdownItem (click)="editResolution(resolution);">Edit</button>
+              <button type="button" ngbDropdownItem (click)="previewDetails(resolution, 'Resolution preview');">View as code</button>
+              <button type="button" ngbDropdownItem (click)="pauseResolution(resolution);">Pause</button>
+              <button type="button" ngbDropdownItem (click)="extendResolution(resolution);">Extend</button>
+              <button type="button" ngbDropdownItem (click)="editResolution(resolution);">Edit</button>
             </div>
           </div>
         </header>
