--- a/ui/dashboard/src/app/@routes/home/home.html
+++ b/ui/dashboard/src/app/@routes/home/home.html
@@ -2,21 +2,20 @@
   <loader *ngIf="loaders.tasks"></loader>
   <error-message [data]="errors.tasks" *ngIf="errors.tasks && !loaders.tasks"></error-message>
 
-
   <div class="main" *ngIf="!loaders.tasks && !errors.tasks">
     <header>
       <h1>
         Tasks -
         <div class="form-inline" style="display:inline-block;">
           <select class="form-control" id="filter_type" name="filter_type" [(ngModel)]="pagination.type"
-            (change)="pagination.state = pagination.type === 'resolvable' ? '' : pagination.state;search();">
+            (change)="search();">
             <option value="all" *ngIf="meta.user_is_admin">All</option>
             <option value="own">As a requester</option>
             <option value="resolvable">As a resolver</option>
           </select>
           &nbsp;
           <select class="form-control" id="filter_state" name="filter_state" [(ngModel)]="pagination.state"
-            (change)="search()" [disabled]="pagination.type === 'resolvable'">
+            (change)="search()">
             <option value="">-- All state --</option>
             <option value="BLOCKED">BLOCKED</option>
             <option value="CANCELLED">CANCELLED</option>
@@ -37,8 +36,8 @@
         </header>
         <section>
           <div *ngIf="display.newTasks" class="alert alert-info">
-            <strong>New tasks</strong> has been added. <button type="button" class="btn btn-info"
-              (click)="displayNewTasks()">Fetch the new ones</button>
+            <strong>New tasks</strong> have been added. <button type="button" class="btn btn-info"
+              (click)="displayNewTasks()">Refresh</button>
           </div>
           <div class="table-striped table-condensed" infiniteScroll (scrolled)="next()">
             <table class="table home_tasks">
@@ -84,36 +83,39 @@
                     </td>
                     <td class="nowrap d-none d-xl-table-cell">{{item.last_activity | fromNow}}</td>
                     <td class="task_actions">
-                      <div class="btn-group" ngbDropdown placement="bottom-right" role="group">
-                        <button class="btn btn-sm btn-secondary btn-outline-primary" ngbDropdownToggle>Actions</button>
+                      <div
+                        *ngIf="(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED') || meta.user_is_admin"
+                        class="btn-group utask_bloc_header_dropdown" ngbDropdown>
+                        <div class="btn-group" role="group">
+                          <button type="button" class="btn btn-sm btn-primary" title="Run"
+                            (click)="runResolution(item.resolution, item.id); $event.stopPropagation();"
+                            *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'">
+                            <i class="fas fa-play"></i>
+                          </button>
+                          <button type="button" class="btn btn-sm btn-primary" title="Cancel"
+                            (click)="cancelResolution(item.resolution, item.id); $event.stopPropagation();"
+                            *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'">
+                            <i class="fas fa-ban"></i>
+                          </button>
+                          <button *ngIf="(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED')"
+                            type="button" class="btn btn-sm btn-primary" ngbDropdownToggle>
+                            More
+                          </button>
+                          <button type="button" class="btn btn-sm btn-primary" title="Delete"
+                            *ngIf="!(item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED') && meta.user_is_admin"
+                            (click)="deleteTask(item.id);$event.stopPropagation();">
+                            <i class="fas fa-trash"></i>
+                          </button>
+                        </div>
                         <div class="dropdown-menu" ngbDropdownMenu>
-                          <strong *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
-                            class="px-3 py-3" style="font-size:18px;">Execution</strong>
-                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
-                            ngbDropdownItem
-                            (click)="runResolution(item.resolution, item.id); $event.stopPropagation();">
-                            Run
-                          </button>
-                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
-                            ngbDropdownItem
-                            (click)="pauseResolution(item.resolution, item.id); $event.stopPropagation();">
-                            Pause
-                          </button>
-                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
-                            ngbDropdownItem
-                            (click)="cancelResolution(item.resolution, item.id); $event.stopPropagation();">
-                            Cancel
-                          </button>
-                          <button *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
-                            ngbDropdownItem
-                            (click)="extendResolution(item.resolution, item.id); $event.stopPropagation();">
-                            Extend
-                          </button>
-
-                          <strong class="px-3 py-3" style="font-size:18px;">Task</strong>
-                          <button ngbDropdownItem (click)="deleteTask(item.id); $event.stopPropagation();">
-                            Delete
-                          </button>
+                          <button type="button" ngbDropdownItem
+                            *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            (click)="pauseResolution(item.resolution, item.id); $event.stopPropagation();">Pause</button>
+                          <button type="button" ngbDropdownItem
+                            *ngIf="item.resolution && item.state !== 'DONE' && item.state !== 'CANCELLED'"
+                            (click)="extendResolution(item.resolution, item.id); $event.stopPropagation();">Extend</button>
+                          <button type="button" ngbDropdownItem *ngIf="meta.user_is_admin"
+                            (click)="deleteTask(item.id);$event.stopPropagation();">Delete</button>
                         </div>
                       </div>
                     </td>
@@ -124,7 +126,7 @@
           </div>
 
           <div style="text-align:center;">
-            <button type="text" class="btn btn-outline-primary btn-secondary" (click)="next(!hasMore)"
+            <button type="button" class="btn btn-outline-primary btn-secondary" (click)="next(!hasMore)"
               *ngIf="tasks.length && hasMore" [disabled]="loaders.next">Show more</button>
           </div>
         </section>
