--- a/ui/dashboard/src/styles.sass
+++ b/ui/dashboard/src/styles.sass
@@ -10,6 +10,27 @@
 @import "styles/editor.sass"
 @import "styles/comment.sass"
 
+@import '~ngx-toastr/toastr'
+@import '~ngx-toastr/toastr-bs4-alert'
+@import '~ngx-toastr/toastr-bs4-alert'
+
+.toast-error
+  background-color: #f8d7da
+  border: 1px solid #721c24
+  * 
+    color: #721c24 !important
+.toast-info
+  background-color: #cfd9f9
+  border: 1px solid #2c3e7a
+  * 
+    color: #2c3e7a !important
+.toast-warning
+  background-color: #ffe5d0
+  border: 1px solid #84420a
+  * 
+    color: #84420a !important
+
+
 .fa-user-shield
   color: gold
 
@@ -189,7 +210,9 @@ g.node
         font-weight: 100
         color:#676767
     > .task_actions
+      width: 150px
       padding: 0.5rem
+      text-align: right
 
 
 
